add automation endpoints get/update/delete
